--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-*{padding:0;margin:0}
+*{padding:0;margin:0;-wekit-user-select:none;}
 a{text-decoration: none;color: #333;}
 body,html{
   width: 100%;
@@ -79,6 +79,7 @@ input[type="range"]::-webkit-slider-thumb {
   border-radius: 100%;
   margin: 0 5px;
   color: #aaa;
+  transition: all .2s;
 }
 
 .colors input[type="color"] {
@@ -88,9 +89,10 @@ input[type="range"]::-webkit-slider-thumb {
   height: 20px;
   background-color: #fff;
   transform: scale(2.5);
+  transition: all .2s;
 }
 .colors a.active{
-  box-shadow: 0 0 10px 0px #DF5F47;
+  box-shadow: 0 0 10px 0px #000;
 }
 .colors a:nth-child(1){
   background-color: #222;
