--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@ body,html{
   background-color: rgb(255, 255, 255);
   margin: auto;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 input[type="range"]{
   -webkit-appearance: none; /*去除默认样式*/
@@ -112,6 +112,19 @@ input[type="range"]::-webkit-slider-thumb {
 .colors a:nth-child(6){
   border-radius: 100%;
   overflow: hidden;
+  position: relative;
+}
+.colors a:nth-child(6) input{
+  opacity: 0;
+}
+.colors a:nth-child(6) .iconfont {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  z-index: -1;
+  color: #000;
+  font-size: 23px;
 }
 .colors a:nth-child(7){
   padding-left: 10px;
